# Os-frame

./: .env.example  README.md  docker-compose.yml  projetafaire.md  pyproject.toml
apps/api/: Dockerfile  README.md  requirements.txt
apps/api/app/: auth.py  auth_jwt.py  authz.py  main.py  ratelimit.py  worker.py
apps/api/config/: users.json
apps/api/config/tenants/: tenant_demo.json
apps/api/wmag_kernel/: .env.example  README.md  __init__.py
apps/api/wmag_kernel/docs/: MASTER_GUIDE.md  a2a_state_machine.md  action_registry.md  design.md  index.md  pocketflow_nodes.md  pocketflow_replacement.md  streaming_contract.md
apps/api/wmag_kernel/kernel/: flow.py  pocketflow_flow.py  pocketflow_runner.py
apps/api/wmag_kernel/registry/: registry_support_v1.json
apps/api/wmag_kernel/schemas/: context_pack.schema.json  events.schema.json  wmag.schema.json  (+3 more)
apps/nginx/: nginx.conf
apps/web/: Dockerfile  README.md  index.html  package.json
docs/: BANK_GRADE.md  BANK_GRADE_PLUSPLUS.md  COCKPIT_API.md  ENTERPRISE.md  ENTERPRISE_PLUS.md  MASTER.md  PROD.md  PRO_HARDCORE.md  ULTIMATE_ENTERPRISE.md  runbook.md
kernel/: flow.py
kernel/adapters/: planner_llm_stub.py  registry_fs.py  storage_inmemory.py
kernel/ports/: hydrator.py  toolrunner.py
kernel/runtime/: events.py  idempotency.py  policy.py  validation.py
registry/: registry_support_v1.json
schemas/: plan.schema.json
server/: api.py
tests/: conftest.py
tests/integration/: test_approval_path.py  test_replay_no_double_email.py
tests/unit/: test_policy_gate.py  test_registry_merge.py  test_retry.py
(+42 files in other folders)
